--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -226,13 +226,14 @@ textarea {
 
 /* Footer */
 footer {
-    background-color: #20211A;
+    background-color: #1e73be;
     color: #fff;
     padding: 25px 0;
     text-align: center;
     font-size: 1rem;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .icon-container ul {
     list-style: none;
@@ -272,7 +273,8 @@ nav .fa-bars, nav .fa-xmark {
     .nav-bar ul {
         display: flex;
         flex-direction: column; /* Stack items vertically */
-        gap: 10px; /* Add some space between items */
+        gap: 25px; /* Add some space between items */
+        padding: 35px;
     }
     .nav-bar ul li {
         display: block; /* Remove inline-block to stack items */
