--- a/assets/css/destinations.css
+++ b/assets/css/destinations.css
@@ -41,7 +41,7 @@ nav {
 
 /* Logo styles */
 .logo {
-    font-size: 2.5em;
+    font-size: 2em;
     color: #fff;
     font-family: 'Pacifico', cursive;
     text-decoration: none;
@@ -177,10 +177,111 @@ main {
 
 /* Footer */
 footer {
-    background-color: #20211A;
+    background-color: #1e73be;
     color: #fff;
     padding: 25px 0;
     text-align: center;
     font-size: 1rem;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Mobile Menu Icons */
+nav .fa-bars, nav .fa-xmark {
+    display: none;
+    font-size: 25px;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* Media Query for 430px to 1000px */
+
+@media (min-width: 430px) and (max-width: 1000px) {
+    .text-box h1 {
+        font-size: 20px;
+    }
+    .nav-bar ul {
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        gap: 2px;
+        padding: 30px;
+    }
+    .nav-bar ul li {
+        display: block; /* Remove inline-block to stack items */
+        text-align: left; /* Align text to the left */
+    }
+    .nav-bar {
+        position: absolute;
+        background: #1e73be;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+    }
+    nav .fa-xmark {
+        display: block;
+        color: #fff;
+        font-weight: bolder;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+
+
+/* Responsive adjustments for smaller screens */
+@media only screen and (max-width: 600px) {
+    .contact-box {
+        padding: 20px;
+    }
+
+    nav .fa-xmark {
+        display: block;
+        color: #fff;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+    nav .fa-bars {
+        display: block;
+        color: #fff;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+
+    .nav-bar ul {
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        gap: 25px; /* Add some space between items */
+        padding: 35px;
+    }
+    .nav-bar ul li {
+        display: block; /* Remove inline-block to stack items */
+        text-align: left; /* Align text to the left */
+    }
+
+    .headline {
+      font-size: 60px;
+    }
+    .nav-bar {
+        position: absolute;
+        background: #1e73be;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    /* Adjust button size and font for smaller screens */
+    .btn {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
+    h2 {
+        font-size: 1.4rem;
+    }
+    .join {
+        font-size: 1.5rem;
+    }
+}
 }
