--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,10 @@ nav {
 }
 
 .hero-button:hover {
-    border-color: #1e73be;
     background-color: #1e73be;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    transform: translateY(-3px);
+    border: #1e73be;
     color: #fff;
 }
 
