--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -102,6 +102,7 @@ main {
 /* Container styling */
 .container {
     position: relative;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
