--- a/assets/css/destinations.css
+++ b/assets/css/destinations.css
@@ -19,7 +19,7 @@ body {
     background-color: #f9f9f9;
 }
 
-/* Header */
+//* Header */
 header {
     background: linear-gradient(45deg, #1e73be, #0e0f0c);
     color: #fff;
@@ -31,7 +31,8 @@ header {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-* Navigation */
+
+/* Navigation */
 nav {
     display: flex;
     align-items: center;
@@ -69,6 +70,8 @@ nav {
     color: #fff;
 }
 
+
+
 .nav-bar ul li a::after {
     content: '';
     width: 0;
@@ -82,6 +85,7 @@ nav {
 .nav-bar ul li a:hover::after {
     width: 100%;
 }
+
 
 /* Main Content */
 main {
