--- a/assets/css/destinations.css
+++ b/assets/css/destinations.css
@@ -19,7 +19,7 @@ body {
     background-color: #f9f9f9;
 }
 
-//* Header */
+/* Header */
 header {
     background: linear-gradient(45deg, #1e73be, #0e0f0c);
     color: #fff;
@@ -35,6 +35,7 @@ header {
 /* Navigation */
 nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
 }
@@ -84,6 +85,8 @@ nav {
 .nav-bar ul li a:hover::after {
     width: 100%;
 }
+
+
 
 
 /* Main Content */
@@ -206,31 +209,47 @@ nav .fa-bars, nav .fa-xmark {
     .destination-header p {
         font-size: 16px;
     }
-
-    /* Icon adjustments for navigation */
-    nav .fa-bars, nav .fa-xmark {
+    nav .fa-xmark {
+        display: block;
+        color: #fff;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+    nav .fa-bars {
         display: block;
         color: #fff;
         font-size: 1.5em;
         cursor: pointer;
     }
 
-    /* Logo size adjustment */
     .logo {
         font-size: 2em;
     }
 
-    /* Nav menu styling for mobile view */
     .nav-bar ul {
         display: flex;
-        flex-direction: column;  /* Stack items vertically */
-        gap: 25px;  /* Add some space between items */
+        flex-direction: column; /* Stack items vertically */
+        gap: 25px; /* Add some space between items */
         padding: 35px;
     }
-
     .nav-bar ul li {
-        display: block;  /* Remove inline-block to stack items */
-        text-align: left;  /* Align text to the left */
+        display: block; /* Remove inline-block to stack items */
+        text-align: left; /* Align text to the left */
+    }
+
+    .headline {
+      font-size: 60px;
+    }
+    .nav-bar {
+        position: absolute;
+        background: #1e73be;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
     }
 
     /* Paragraph text adjustment */
