--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -20,8 +20,9 @@ body {
     background-color: #f9f9f9;
 }
 
+
 /* Header */
-.header2 {
+header {
     background: linear-gradient(45deg, #1e73be, #0e0f0c);
     color: #fff;
     position: fixed;
@@ -32,9 +33,11 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
+
 /* Navigation */
 nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
 }
@@ -46,6 +49,7 @@ nav {
     font-family: 'Pacifico', cursive;
     text-decoration: none;
 }
+
 
 .nav-bar {
     display: flex;
@@ -67,6 +71,8 @@ nav {
 .nav-bar ul li a:hover {
     color: #fff;
 }
+
+
 
 .nav-bar ul li a::after {
     content: '';
@@ -207,54 +213,48 @@ nav .fa-solid.fa-xmark {
 /* Media Query for devices with min-width 430px and max-width 1000px */
 @media (min-width: 430px) and (max-width: 1000px) {
     
-    /* Header Adjustments */
-    .header2 {
-        padding: 10px 15px;
+    /* nav Adjustments */
+    nav .fa-xmark {
+        display: block;
+        color: #fff;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+    nav .fa-bars {
+        display: block;
+        color: #fff;
+        font-size: 1.5em;
+        cursor: pointer;
     }
 
     .logo {
-        font-size: 1.5em;
-    }
-
-    /* Navigation Bar */
-    nav {
-        flex-direction: column;
-        align-items: flex-start;
+        font-size: 2em;
     }
 
     .nav-bar ul {
-        flex-direction: column;
-        gap: 10px;
-        padding: 15px;
-        width: 100%;
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        gap: 25px; /* Add some space between items */
+        padding: 35px;
     }
-
     .nav-bar ul li {
-        text-align: left;
+        display: block; /* Remove inline-block to stack items */
+        text-align: left; /* Align text to the left */
     }
 
-    .nav-bar ul li a {
-        font-size: 1.1em;
+    .headline {
+      font-size: 60px;
     }
-
     .nav-bar {
         position: absolute;
-        top: 0;
-        right: 0px;
-        width: 250px;
-        background-color: #1e73be;
+        background: #1e73be;
         height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
         text-align: left;
-        transition: 0.5s;
-    }
-
-    /* Adjust Mobile Icons */
-    nav .fa-solid.fa-bars,
-    nav .fa-solid.fa-xmark {
-        display: block;
-        color: #fff;
-        font-size: 1.8em;
-        cursor: pointer;
+        z-index: 2;
+        transition: 1s;
     }
 
     /* About Content Adjustments */
